--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@ name: lauetools-utils-env
 channels:
   - conda-forge
 dependencies:
-  - python=3.12
+  - python>=3.12.*
   - ipykernel
   - jupyterlab
   - numpy=2.0.*
