--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Utilities for LaueTools analysis"
 readme = "README.md"
 license = { text = "MIT" }
-requires-python = "==3.12"
+requires-python = ">=3.12"
 
 dependencies = [
   "numpy>=2.0",
