Added pandas import in peaks.simulate and added dependencies in pyproject toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,18 +11,26 @@ license = { text = "MIT" }
 requires-python = ">=3.12"
 
 dependencies = [
-  "numpy>=2.0",
-  "scipy>=1.13",
-  "matplotlib>=3.9",
-  "pandas>=2.2",
-  "h5py>=3.11",
-  "fabio>=2024.9",
-  "scikit-image>=0.24",
-  "scikit-learn>=1.5",
-  "wxpython>=4.2",
-  "plotly>=6.0",
-  "anywidget>=0.9"
+  "numpy==2.0.*",
+  "scipy==1.13.*",
+  "matplotlib==3.9.*",
+  "pandas==2.2.*",
+  "h5py==3.11.*",
+  "fabio==2024.9.*",
+  "scikit-image==0.24.*",
+  "scikit-learn==1.5.*",
+  "wxpython==4.2.*",
+  "plotly==6.*",
+  "anywidget>=0.9",
+  "multiprocess==0.70.18",
+  "ipykernel",
+  "jupyterlab",
+  "ipympl",
+  "ipywidgets",
+  "widgetsnbextension",
+  "LaueTools==3.1.19"
 ]
+
 authors = [
   { name = "Sergio Bongiorno", email = "sergiobng@proton.me" },   
   { name = "Beatriz G Foschiani", email = "beatrizgfoschiani@gmail.com" }
