--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: lauetools-utils-env
+name: lauexplore-env
 channels:
   - conda-forge
 dependencies:
@@ -22,4 +22,4 @@ dependencies:
   - widgetsnbextension
   - pip
   - pip:
-      - LaueTools==3.1.19
+      - LaueTools==3.1.25
